--- a/app/src/main/res/layout/fragment_home_board.xml
+++ b/app/src/main/res/layout/fragment_home_board.xml
@@ -45,7 +45,7 @@
             android:layout_marginEnd="16dp" android:layout_marginStart="17.5dp"
             android:src="#b0caea"
             android:layout_alignParentStart="true" android:layout_centerVertical="true"/>
-        <EditText
+        <TextView
 
             android:layout_marginStart="65.5dp"
             android:layout_toEndOf="@+id/iv_home_board_profile_img"
@@ -61,7 +61,6 @@
             android:layout_alignParentStart="true" android:layout_centerVertical="true"/>
     </RelativeLayout>
 
-    //앨범 recyclerview
 
     <LinearLayout
         android:id="@+id/ll_home_board_board_view"
