--- a/app/src/main/res/layout/rv_item_board.xml
+++ b/app/src/main/res/layout/rv_item_board.xml
@@ -32,7 +32,7 @@
                 android:textSize="15sp"
                 android:text="협업" />
 
-            <view
+            <View
                 android:id="@+id/v_item_board_slash"
                 android:layout_toRightOf="@+id/tv_item_board_category"
                 android:layout_width="1dp"
@@ -215,7 +215,7 @@
             android:text="이충엽" />
 
 
-        <view
+        <View
             android:layout_width="1dp"
             android:layout_height="7.6dp"
             android:layout_alignParentStart="true"
