--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -45,13 +45,13 @@
      />
     </RelativeLayout>
     <RelativeLayout
-        android:gravity="center_vertical"
-        android:layout_marginTop="12dp"
         android:layout_gravity="center"
+        android:layout_marginTop="12dp"
         android:background="#ffffff"
         android:layout_width="324dp"
         android:layout_height="48dp">
         <TextView
+            android:layout_marginTop="14dp"
             android:id="@+id/tv_sign_up2_email"
             android:textSize="14dp"
             android:layout_marginLeft="18dp"
@@ -60,6 +60,7 @@
             android:textColor="#000000"
             android:text="이메일"/>
         <EditText
+            android:layout_marginTop="14dp"
             android:id="@+id/et_sign_up2_email"
             android:background="@null"
             android:layout_width="wrap_content"
@@ -68,6 +69,19 @@
             android:textSize="14sp"
             android:textColor="#999999"
             android:layout_marginLeft="113dp"
+            />
+        <TextView
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="23dp"
+            android:layout_alignParentRight="true"
+            android:id="@+id/tv_sign_up2_overlap_check"
+            android:background="#b0caea"
+            android:layout_width="50dp"
+            android:layout_height="38dp"
+            android:textSize="10sp"
+            android:textColor="#ffffff"
+            android:gravity="center"
+            android:text="중복 확인"
             />
     </RelativeLayout>
     <RelativeLayout
@@ -122,9 +136,44 @@
             android:layout_marginLeft="113dp"
             />
     </RelativeLayout>
-
+    <FrameLayout
+        android:layout_marginTop="24dp"
+        android:layout_gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
     <TextView
-        android:layout_marginTop="25dp"
+        android:id="@+id/tv_sign_up2_available_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:textColor="#01142b"
+        android:lineSpacingExtra="7sp"
+        android:gravity="center_horizontal"
+       android:text="사용가능한 이메일 입니다."
+        />
+    <TextView
+        android:id="@+id/tv_sign_up2_unavailable_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:textColor="#b41616"
+        android:lineSpacingExtra="7sp"
+        android:gravity="center_horizontal"
+      android:text="이미 가입된 이메일입니다."/>
+
+        <TextView
+            android:id="@+id/tv_sign_up2_unavailable_pw"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13sp"
+            android:textColor="#b41616"
+            android:lineSpacingExtra="7sp"
+            android:gravity="center_horizontal"
+            android:text="잘못된 비밀번호 입니다."
+        />
+    </FrameLayout>
+    <TextView
+        android:layout_marginTop="26dp"
         android:id="@+id/tv_sign_up2_confirm_number_send_message"
         android:layout_gravity="center"
         android:background="#b0caea"
