--- a/app/src/main/res/layout/rv_item_board.xml
+++ b/app/src/main/res/layout/rv_item_board.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/rl_item_board_list"
-
-    android:paddingTop="4dp"
-    android:background="#ffffff"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_height="wrap_content"
+    android:background="#ffffff"
+    android:orientation="vertical">
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="8dp"
+        android:background="#f9f9f9" />
+
+    //title
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="71dp">
@@ -28,32 +31,32 @@
                 android:layout_marginStart="18.5dp"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="1sp"
+                android:text="협업"
                 android:textColor="#b0caea"
-                android:textSize="15sp"
-                android:text="협업" />
+                android:textSize="15sp" />
 
             <View
                 android:id="@+id/v_item_board_slash"
-                android:layout_toRightOf="@+id/tv_item_board_category"
                 android:layout_width="1dp"
                 android:layout_height="15.6dp"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
+                android:layout_toRightOf="@+id/tv_item_board_category"
                 android:background="#999999" />
 
 
             <TextView
-                android:layout_toRightOf="@+id/v_item_board_slash"
                 android:id="@+id/tv_item_board_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_marginStart="10dp"
+                android:layout_toRightOf="@+id/v_item_board_slash"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="1sp"
+                android:text="개발 협업할 디자이너 구합니다!"
                 android:textColor="#222222"
-                android:textSize="15sp"
-                android:text="개발 협업할 디자이너 구합니다!" />
+                android:textSize="15sp" />
 
         </RelativeLayout>
 
@@ -72,10 +75,10 @@
                 android:layout_weight="1"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="12sp"
-                android:textColor="#999999"
-                android:textSize="10sp"
                 android:paddingEnd="15dp"
-                android:text="#사업" />
+                android:text="#사업"
+                android:textColor="#999999"
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/tv_item_board_tag2"
@@ -84,10 +87,10 @@
                 android:layout_weight="1"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="12sp"
-                android:textColor="#999999"
-                android:textSize="10sp"
                 android:paddingEnd="15dp"
-                android:text="#창업" />
+                android:text="#창업"
+                android:textColor="#999999"
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/tv_item_board_tag3"
@@ -96,10 +99,10 @@
                 android:layout_weight="1"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="12sp"
-                android:textColor="#999999"
                 android:paddingEnd="15dp"
-                android:textSize="10sp"
-                android:text="#준비" />
+                android:text="#준비"
+                android:textColor="#999999"
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/tv_item_board_tag4"
@@ -108,10 +111,10 @@
                 android:layout_weight="1"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="12sp"
-                android:textColor="#999999"
                 android:paddingEnd="15dp"
-                android:textSize="10sp"
-                android:text="#정보" />
+                android:text="#정보"
+                android:textColor="#999999"
+                android:textSize="10sp" />
 
             <TextView
                 android:id="@+id/tv_item_board_tag5"
@@ -120,86 +123,91 @@
                 android:layout_weight="1"
                 android:letterSpacing="-0.01"
                 android:lineSpacingExtra="12sp"
-                android:textColor="#999999"
                 android:paddingEnd="15dp"
-                android:textSize="10sp"
-                android:text="#팁" />
+                android:text="#팁"
+                android:textColor="#999999"
+                android:textSize="10sp" />
 
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/tv_item_board_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rl_item_board_title"
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="30dp"
-            android:layout_below="@id/rl_item_board_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="6sp"
+            android:text="3시간전"
             android:textColor="#999999"
-            android:textSize="10sp"
-            android:text="3시간전" />
+            android:textSize="10sp" />
 
 
     </RelativeLayout>
 
-
-    <ImageView
-        android:id="@+id/iv_item_board_contents_image"
-        android:background="#b0caea"
-        android:layout_width="match_parent" android:layout_height="280dp" />
-
-    <RelativeLayout
+    //contents
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/iv_item_board_contents_image"
+            android:layout_width="match_parent"
+            android:layout_height="280dp"
+            android:background="#b0caea" />
 
         <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="65dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginEnd="65dp"
-            android:layout_marginBottom="10dp"
-            >
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tv_item_board_contents_text"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="안녕하세요ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ오안녕하세요 키이이이 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오"
-                android:textColor="#000000" />
-
-            <TextView
-                android:id="@+id/tv_item_board_contents_more"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@+id/tv_item_board_contents_text"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="0dp"
-                android:letterSpacing="-0.01"
-                android:lineSpacingExtra="6sp"
-                android:textColor="#a7a7a7"
-                android:textSize="10sp"
-                android:text="더보기" />
+                android:layout_marginStart="65dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="65dp"
+                android:layout_marginBottom="10dp">
 
+                <TextView
+                    android:id="@+id/tv_item_board_contents_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="안녕하세요ㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎㅎ오안녕하세요 키이이이 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오안녕하세요 반가워요오"
+                    android:textColor="#000000" />
+
+                <TextView
+                    android:id="@+id/tv_item_board_contents_more"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@+id/tv_item_board_contents_text"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginTop="0dp"
+                    android:letterSpacing="-0.01"
+                    android:lineSpacingExtra="6sp"
+                    android:text="더보기"
+                    android:textColor="#a7a7a7"
+                    android:textSize="10sp" />
+            </RelativeLayout>
         </RelativeLayout>
 
+    </LinearLayout>
 
-
-
-    </RelativeLayout>
-
-
+    //profile
     <RelativeLayout
-        android:layout_width="match_parent"  android:layout_height="64dp">
+        android:layout_width="match_parent"
+        android:layout_height="64dp">
 
         <ImageView
             android:id="@+id/iv_item_board_profile_img"
-            android:layout_width="32dp" android:layout_height="32dp"
+            android:layout_width="32dp"
+            android:layout_height="32dp"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
             android:layout_marginStart="19dp"
-            android:src="#b0caea"
-            android:layout_alignParentStart="true" android:layout_centerVertical="true"/>
+            android:src="#b0caea" />
 
         <TextView
             android:id="@+id/tv_item_board_profile_name"
@@ -210,20 +218,12 @@
             android:layout_marginStart="63.5dp"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="4sp"
+            android:text="이충엽"
             android:textColor="#222222"
-            android:textSize="12sp"
-            android:text="이충엽" />
-
-
-        <View
-            android:layout_width="1dp"
-            android:layout_height="7.6dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="104dp"
-            android:background="#999999" />
-
+            android:textSize="12sp" />
+        
         <TextView
+
             android:id="@+id/tv_item_board_profile_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -232,109 +232,115 @@
             android:layout_marginStart="117dp"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="6sp"
+            android:text="깅스"
             android:textColor="#525252"
-            android:textSize="10sp"
-            android:text="깅스" />
+            android:textSize="10sp" />
 
 
         <TextView
             android:id="@+id/tv_item_board_profile_slash"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/tv_item_board_profile_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="/"/>
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/tv_item_board_profile_team"
+            android:text="/" />
 
         <TextView
             android:id="@+id/tv_item_board_profile_role"
-            android:layout_toRightOf="@+id/tv_item_board_profile_slash"
-            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/tv_item_board_profile_slash"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="6sp"
+            android:text="PM"
             android:textColor="#525252"
-            android:textSize="10sp"
-            android:text="PM" />
+            android:textSize="10sp" />
 
         <RelativeLayout
-            android:id="@+id/rl_item_board_like"
-            android:layout_marginStart="180dp"
-
-            android:layout_width="wrap_content" android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
-            >
+            android:layout_marginEnd="18dp">
 
-            <ImageView
-                android:id="@+id/iv_item_board_like"
+            <RelativeLayout
+                android:id="@+id/rl_item_board_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_thumb_up_black_24dp" />
+                android:layout_centerVertical="true">
 
-            <TextView
-                android:id="@+id/tv_item_board_like_cnt"
+                <ImageView
+                    android:id="@+id/iv_item_board_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
+                    android:src="@drawable/ic_thumb_up_black_24dp" />
+
+                <TextView
+                    android:id="@+id/tv_item_board_like_cnt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/iv_item_board_like"
+                    android:letterSpacing="-0.01"
+                    android:lineSpacingExtra="12sp"
+                    android:text="999+"
+                    android:textColor="#222222"
+                    android:textSize="10sp" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_item_board_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/iv_item_board_like"
-                android:letterSpacing="-0.01"
-                android:lineSpacingExtra="12sp"
-                android:textColor="#222222"
-                android:textSize="10sp"
-                android:text="999+" />
+                android:layout_marginStart="10dp"
+                android:layout_toRightOf="@id/rl_item_board_like">
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/iv_item_board_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_comment_black_24dp" />
 
-        <RelativeLayout
-            android:id="@+id/rl_item_board_comment"
-            android:layout_toRightOf="@id/rl_item_board_like"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            >
+                <TextView
+                    android:id="@+id/tv_item_board_comment_cnt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/iv_item_board_comment"
+                    android:letterSpacing="-0.01"
+                    android:lineSpacingExtra="12sp"
+                    android:text="999+"
+                    android:textColor="#222222"
+                    android:textSize="10sp" />
+
+            </RelativeLayout>
 
             <ImageView
-                android:id="@+id/iv_item_board_comment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_comment_black_24dp" />
-
-            <TextView
-                android:id="@+id/tv_item_board_comment_cnt"
+                android:id="@+id/iv_item_board_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/iv_item_board_comment"
-                android:letterSpacing="-0.01"
-                android:lineSpacingExtra="12sp"
-                android:textColor="#222222"
-                android:textSize="10sp"
-                android:text="999+" />
+                android:layout_marginStart="10dp"
+                android:layout_toRightOf="@id/rl_item_board_comment"
+                android:src="@drawable/ic_share_black_24dp" />
+
+            <ImageView
+                android:id="@+id/iv_item_board_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:layout_toRightOf="@id/iv_item_board_share"
+                android:src="@drawable/ic_more_vert_black_24dp" />
 
         </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/iv_item_board_share"
-            android:layout_toRightOf="@id/rl_item_board_comment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:layout_centerVertical="true"
-            android:src="@drawable/ic_share_black_24dp" />
-
-        <ImageView
-            android:id="@+id/iv_item_board_menu"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_toRightOf="@id/iv_item_board_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_more_vert_black_24dp"/>
-
-
 
     </RelativeLayout>
 
