--- a/app/src/main/res/layout/activity_detail_board.xml
+++ b/app/src/main/res/layout/activity_detail_board.xml
@@ -8,7 +8,6 @@
     android:background="#ffffff"
     android:orientation="vertical"
     android:paddingTop="4dp">
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="71dp">
@@ -144,6 +143,14 @@
 
     </RelativeLayout>
 
+    <ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
 
     <ImageView
         android:id="@+id/iv_detail_board_contents_image"
@@ -188,22 +195,18 @@
 
     </RelativeLayout>
 
-
     <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="64dp">
+        android:layout_width="match_parent" android:layout_height="64dp">
 
         <ImageView
-            android:id="@+id/iv_detail_board_profile_img"
-            android:layout_width="32dp"
-            android:layout_height="32dp"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
+            android:id="@+id/iv_item_board_profile_img"
+            android:layout_width="32dp" android:layout_height="32dp"
             android:layout_marginStart="19dp"
-            android:src="#b0caea" />
+            android:src="#b0caea"
+            android:layout_alignParentStart="true" android:layout_centerVertical="true"/>
 
         <TextView
-            android:id="@+id/tv_detail_board_profile_name"
+            android:id="@+id/tv_item_board_profile_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -215,7 +218,6 @@
             android:textColor="#222222"
             android:textSize="12sp" />
 
-
         <View
             android:layout_width="1dp"
             android:layout_height="7.6dp"
@@ -225,7 +227,7 @@
             android:background="#999999" />
 
         <TextView
-            android:id="@+id/tv_detail_board_profile_team"
+            android:id="@+id/tv_item_board_profile_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -233,110 +235,123 @@
             android:layout_marginStart="117dp"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="6sp"
-            android:text="깅스"
             android:textColor="#525252"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:text="깅스" />
 
 
         <TextView
-            android:id="@+id/tv_detail_board_profile_slash"
+            android:id="@+id/tv_item_board_profile_slash"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@+id/tv_item_board_profile_team"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/tv_detail_board_profile_team"
-            android:text="/" />
+            android:text="/"/>
 
         <TextView
-            android:id="@+id/tv_detail_board_profile_role"
+            android:id="@+id/tv_item_board_profile_role"
+            android:layout_toRightOf="@+id/tv_item_board_profile_slash"
+            android:layout_centerVertical="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_toRightOf="@+id/tv_detail_board_profile_slash"
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="6sp"
-            android:text="PM"
             android:textColor="#525252"
-            android:textSize="10sp" />
+            android:textSize="10sp"
+            android:text="PM" />
 
         <RelativeLayout
-            android:id="@+id/rl_detail_board_like"
             android:layout_width="wrap_content"
-
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="180dp">
+            android:layout_marginEnd="18dp"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true">
 
-            <ImageView
-                android:id="@+id/iv_detail_board_like"
+            <RelativeLayout
+                android:id="@+id/rl_item_board_like"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_thumb_up_black_24dp" />
+                android:layout_centerVertical="true">
 
-            <TextView
-                android:id="@+id/tv_detail_board_like_cnt"
+                <ImageView
+                    android:id="@+id/iv_item_board_like"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginTop="0dp"
+                    android:src="@drawable/ic_thumb_up_black_24dp" />
+
+                <TextView
+                    android:id="@+id/tv_item_board_like_cnt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/iv_item_board_like"
+                    android:letterSpacing="-0.01"
+                    android:lineSpacingExtra="12sp"
+                    android:text="999+"
+                    android:textColor="#222222"
+                    android:textSize="10sp" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/rl_item_board_comment"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginStart="5dp"
-                android:layout_marginLeft="5dp"
-                android:layout_toEndOf="@+id/iv_detail_board_like"
-                android:layout_toRightOf="@id/iv_detail_board_like"
-                android:letterSpacing="-0.01"
-                android:lineSpacingExtra="12sp"
-                android:text="999+"
-                android:textColor="#222222"
-                android:textSize="10sp" />
+                android:layout_marginStart="10dp"
+                android:layout_toRightOf="@id/rl_item_board_like">
 
-        </RelativeLayout>
+                <ImageView
+                    android:id="@+id/iv_item_board_comment"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/ic_comment_black_24dp" />
 
-        <RelativeLayout
-            android:id="@+id/rl_detail_board_comment"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_toRightOf="@id/rl_detail_board_like">
+                <TextView
+                    android:id="@+id/tv_item_board_comment_cnt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/iv_item_board_comment"
+                    android:letterSpacing="-0.01"
+                    android:lineSpacingExtra="12sp"
+                    android:text="999+"
+                    android:textColor="#222222"
+                    android:textSize="10sp" />
+
+            </RelativeLayout>
 
             <ImageView
-                android:id="@+id/iv_detail_board_comment"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/ic_comment_black_24dp" />
-
-            <TextView
-                android:id="@+id/tv_detail_board_comment_cnt"
+                android:id="@+id/iv_item_board_share"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@id/iv_detail_board_comment"
-                android:letterSpacing="-0.01"
-                android:lineSpacingExtra="12sp"
-                android:text="999+"
-                android:textColor="#222222"
-                android:textSize="10sp" />
+                android:layout_marginStart="10dp"
+                android:layout_toRightOf="@id/rl_item_board_comment"
+                android:src="@drawable/ic_share_black_24dp" />
+
+            <ImageView
+                android:id="@+id/iv_item_board_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="10dp"
+                android:layout_toRightOf="@id/iv_item_board_share"
+                android:src="@drawable/ic_more_vert_black_24dp" />
 
         </RelativeLayout>
-
-        <ImageView
-            android:id="@+id/iv_detail_board_share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_toRightOf="@id/rl_detail_board_comment"
-            android:src="@drawable/ic_share_black_24dp" />
-
-        <ImageView
-            android:id="@+id/iv_detail_board_menu"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginStart="10dp"
-            android:layout_toRightOf="@id/iv_detail_board_share"
-            android:src="@drawable/ic_more_vert_black_24dp" />
-
 
     </RelativeLayout>
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_item_detailboard_list"
+        android:layout_width="match_parent"
+        android:nestedScrollingEnabled="false"
+        android:layout_height="wrap_content"/>
 
+    </LinearLayout>
+</ScrollView>
 </LinearLayout>
