--- a/app/src/main/res/layout/fragment_home_board.xml
+++ b/app/src/main/res/layout/fragment_home_board.xml
@@ -56,7 +56,8 @@
             android:letterSpacing="-0.01"
             android:lineSpacingExtra="2sp"
             android:hint="공유하고싶은 소식을 입력하세요"
-            android:layout_alignParentStart="true" android:layout_centerVertical="true"/>
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"/>
     </RelativeLayout>
 
 
@@ -64,12 +65,14 @@
         android:id="@+id/ll_home_board_board_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:orientation="vertical"
         android:background="#FFFFFF">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_item_board_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+
     </LinearLayout>
 
 
