--- a/app/src/main/res/layout/activity_message_send1.xml
+++ b/app/src/main/res/layout/activity_message_send1.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MessageSend2Activity">
+    tools:context=".Hyunjin.Activity.MessageSend1Activity">
     <FrameLayout
         android:id="@+id/fl_top_messagesend_tab"
         android:layout_width="match_parent"
