--- a/app/src/main/res/layout/activity_top_navi_message_notice.xml
+++ b/app/src/main/res/layout/activity_top_navi_message_notice.xml
@@ -1,9 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TopNaviMessageNoticeActivity">
-
-</android.support.constraint.ConstraintLayout>
+    tools:context=".Hyunjin.Activity.TopNaviMessageNoticeActivity">
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tl_top_navi_act_top_menu"
+        android:background="#FFFFFF"
+        android:elevation="5dp"
+        app:tabIndicatorColor="#40D39F"
+        android:layout_width="match_parent"
+        android:layout_height="72dp"
+        android:layout_alignParentTop="true">
+    </android.support.design.widget.TabLayout>
+    <android.support.v4.view.ViewPager
+        android:id="@+id/vp_top_navi_act_frag_pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/tl_top_navi_act_top_menu">
+    </android.support.v4.view.ViewPager>
+</RelativeLayout>
