--- a/app/src/main/res/layout/activity_bottom_navi.xml
+++ b/app/src/main/res/layout/activity_bottom_navi.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BottomNaviActivity">
+    tools:context=".Moohyeon.Activity.BottomNaviActivity">
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_bottom_navi_act_frag_pager"
         android:layout_width="match_parent"
