--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#ffffff"
-    tools:context=".LoginActivity">
+    tools:context=".Moohyeon.Activity.LoginActivity">
     <TextView
         android:layout_marginTop="96dp"
         android:layout_gravity="center"
@@ -41,6 +41,7 @@
         android:background="@null"
         android:id="@+id/et_login_id"
         android:layout_marginLeft="32dp"
+        android:textSize="14dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="gingsdesign@gmail.com"/>
@@ -61,6 +62,7 @@
             android:gravity="center_horizontal"
             android:text="비밀번호"/>
         <EditText
+            android:textSize="14dp"
             android:layout_marginTop="16dp"
             android:background="@null"
             android:id="@+id/et_login_pw"
