--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#f9f9f9"
-    tools:context=".SignUp2Activity">
+    tools:context=".Moohyeon.Activity.SignUp2Activity">
 
     <TextView
         android:layout_width="match_parent"
@@ -84,9 +84,24 @@
             android:text="중복 확인"
             />
     </RelativeLayout>
+
+
+    <TextView
+        android:layout_marginTop="6dp"
+        android:layout_gravity="center"
+        android:id="@+id/tv_sign_up2_available_email"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="13sp"
+        android:textColor="#16b42b"
+        android:lineSpacingExtra="7sp"
+        android:gravity="center_horizontal"
+        android:text=""
+        />
+
     <RelativeLayout
         android:gravity="center_vertical"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="6dp"
         android:layout_gravity="center"
         android:background="#ffffff"
         android:layout_width="324dp"
@@ -136,42 +151,19 @@
             android:layout_marginLeft="113dp"
             />
     </RelativeLayout>
-    <FrameLayout
-        android:layout_marginTop="24dp"
-        android:layout_gravity="center"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-    <TextView
-        android:id="@+id/tv_sign_up2_available_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="13sp"
-        android:textColor="#01142b"
-        android:lineSpacingExtra="7sp"
-        android:gravity="center_horizontal"
-       android:text="사용가능한 이메일 입니다."
-        />
-    <TextView
-        android:id="@+id/tv_sign_up2_unavailable_email"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="13sp"
-        android:textColor="#b41616"
-        android:lineSpacingExtra="7sp"
-        android:gravity="center_horizontal"
-      android:text="이미 가입된 이메일입니다."/>
 
         <TextView
-            android:id="@+id/tv_sign_up2_unavailable_pw"
+            android:layout_marginTop="24dp"
+            android:layout_gravity="center"
+            android:id="@+id/tv_sign_up2_available_pw"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="13sp"
-            android:textColor="#b41616"
+            android:textColor="#64dfff"
             android:lineSpacingExtra="7sp"
             android:gravity="center_horizontal"
-            android:text="잘못된 비밀번호 입니다."
-        />
-    </FrameLayout>
+            android:text=""/>
+
     <TextView
         android:layout_marginTop="26dp"
         android:id="@+id/tv_sign_up2_confirm_number_send_message"
