--- a/app/src/main/res/layout/activity_category_board.xml
+++ b/app/src/main/res/layout/activity_category_board.xml
@@ -18,18 +18,21 @@
             android:layout_height="wrap_content">
 
             <TextView
+                android:id="@+id/tv_category_board_category_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#040404"
                 android:textSize="15sp"
-                tools:text="질문" />
+                android:textStyle="bold"
+                android:text="질문" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="#040404"
                 android:textSize="15sp"
-                tools:text=" 보드" />
+                android:textStyle="bold"
+                android:text=" 보드" />
         </LinearLayout>
 
         <ImageView
@@ -71,7 +74,7 @@
         android:textColor="#999999"
         android:textSize="11sp"
         android:layout_marginEnd="60dp"
-        tools:text="추천수" />
+        android:text="추천수" />
 
     <TextView
         android:id="@+id/tv_category_board_new_rank"
@@ -85,7 +88,7 @@
         android:textColor="#999999"
         android:textSize="11sp"
         android:layout_marginEnd="20dp"
-        tools:text="최신순" />
+        android:text="최신순" />
 
 </RelativeLayout>
 
@@ -93,12 +96,15 @@
     <LinearLayout
         android:id="@+id/ll_category_board_board_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="#FFFFFF">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_item_category_board_list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
     </LinearLayout>
 
 </LinearLayout>
